--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -24,7 +24,7 @@
       src="https://kit.fontawesome.com/1ce1b2bdd8.js"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>ShopIt</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
