--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -24,6 +24,10 @@
       src="https://kit.fontawesome.com/1ce1b2bdd8.js"
       crossorigin="anonymous"
     ></script>
+
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="./favicon.ico" />
+
     <title>ShopIt</title>
   </head>
   <body>
