--- a/apps/Client/public/index.html
+++ b/apps/Client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Shop it Commerce is a Ecommerce website"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,10 +20,6 @@
       href="https://fonts.googleapis.com/css?family=Roboto|Nunito Sans"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/1ce1b2bdd8.js"
-      crossorigin="anonymous"
-    ></script>
 
     <link rel="icon" href="./favicon.ico" />
     <link rel="apple-touch-icon" href="./favicon.ico" />
